<resources>
    <string name="app_name">Frami</string>
    <string name="themeColor">#01635D</string>
    <string name="no_internet">Please check your network connection.</string>
    <string name="request_timeout">Request timed out. Please try again later.</string>
    <string name="some_thing_wrong">Some thing went wrong. Please try again later.</string>
    <string name="connection_error">You are offline. Kindly check your network connection.</string>
    <string name="session_expired">Your session has expired, please log in again.</string>
    <string name="na">N/A</string>
    <string name="google_map_key">AIzaSyD7kFS1_3KxhA4LNYwu_bjE8w2wQMwZoks</string>
    <string name="app_update">App Update</string>
    <string name="exit">Exit</string>
    <string name="update">Update</string>
    <string name="new_version">A new version of the %s app is available and required to continue.</string>
    <string name="splash_slogan">Join the movement</string>
    <string name="launched_new_version">Launched new Version %s.</string>
    <string name="update_new_version">Please update the new version</string>
    <string name="whats_new_in_">What is the new in %s</string>
    <string name="default_notification_channel_id" translatable="false">Frami Notifications</string>
    <string name="ok">OK</string>
    <string name="no">No</string>
    <string name="yes">Yes</string>
    <string name="cancel">Cancel</string>
    <string name="share">Share</string>
    <string name="permission_storage">We need access gallery and camera for performing necessary task. Please permit the permission through Settings screen.\n\nSelect Permissions -> Enable permission</string>
    <string name="permit_manually">Permit Manually</string>
    <string name="toast_image_intent_null">Image picker option is missing!</string>
    <string name="choose_option">Choose Option</string>
    <string name="select_an_option_to_pick_an_image">Select an option to pick an image</string>
    <string name="select_an_option_to_pick_a_video">Select an option to pick a video</string>
    <string name="camera">Camera</string>
    <string name="photo_library">Photo Library</string>
    <string name="read_more">+ More</string>
    <string name="read_less">- Less</string>
    <string name="under_development">Under development</string>
    <string name="coming_soon">Coming Soon..</string>
    <string name="logout_message">Are you sure do you want to logout?</string>
    <string name="delete_account_message">Are you sure do you want to delete account?</string>
    <string name="unfollow_message">Sure you want to unfollow?</string>
    <string name="intro_title_1">Activity</string>
    <string name="intro_title_2">Community</string>
    <string name="intro_title_3">Challenge</string>
    <string name="intro_title_4">Events</string>
    <string name="intro_title_5">Reward</string>
    <string name="intro_text_1">Connect your device to upload activities or manually create activities in the app.</string>
    <string name="intro_text_2">In FRAMI you will find a wide range of communities consisting of likeminded individuals who share similar interests as yourself.</string>
    <string name="intro_text_3">Few things are more rewarding than achieving an objective or overcoming a challenge.</string>
    <string name="intro_text_4">Explore everything FRAMI has to offer; from communities of people sharing your interests in sports, to new events your co-workers have organized before the city marathon.</string>
    <string name="intro_text_5">In FRAMI you will find rewards from real brands - sportswear, equipment, and adventure providers - that you can unlock by tracking your activities and complete challenges.</string>
    <string name="skip">Skip</string>
    <string name="guest_user_log_in">Guest User Log In</string>
    <string name="sign_up">Sign Up</string>
    <string name="sign_up_with_email">Sign Up With Email</string>
    <string name="new_to_frami">New to Frami?</string>
    <string name="log_in">Log In</string>
    <string name="log_in_"><u>Log In</u></string>
    <string name="log_in_with_email">Log In With Email</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="welcome_back">Welcome Back!</string>
    <string name="log_in_with">Log in with</string>
    <string name="facebook">Facebook</string>
    <string name="google">Google</string>
    <string name="apple">Apple</string>
    <string name="continue_with_google">Continue with Google</string>
    <string name="continue_with_facebook">Continue with Facebook</string>
    <string name="continue_with_apple">Continue with Apple</string>
    <string name="continue_with_email">Continue with Email</string>
    <string name="or">Or</string>
    <string name="or_">or</string>
    <string name="email">Email</string>
    <string name="your_email">Your email</string>
    <string name="password">Password</string>
    <string name="personal_info">Personal Info</string>
    <string name="add_profile_photo">Add profile photo</string>
    <string name="enter_first_name">Enter first name</string>
    <string name="enter_last_name">Enter last name</string>
    <string name="gender">Gender</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="other">Other</string>
    <string name="date_of_birth">Date of Birth</string>
    <string name="dd">DD</string>
    <string name="mm">MM</string>
    <string name="yyyy">YYYY</string>
    <string name="nationality">Nationality</string>
    <string name="select_nationality">Select Nationality</string>
    <string name="next">Next</string>
    <string name="contact_info_instruction">Add your personal information. Email will be used for marketing purpose (if accepted) and also for service updates.</string>
    <string name="mobile">Mobile#</string>
    <string name="contact_info">Contact Info</string>
    <string name="if_applicable">EMPLOYER</string>
    <string name="work_email_instruction">Add your work email to automatically enroll to your company community</string>
    <string name="work_email">Work email</string>
    <string name="terms_condition"><![CDATA[Terms & Condition]]></string>
    <string name="you_agree_t"><![CDATA[You agree to our terms of use and privacy policy. Terms of use & Privacy Policy]]></string>
    <string name="you_agree_while_login">You agree to the Terms of Service.\nview our Privacy Policy</string>
    <string name="frami_would">FRAMI can send me relevant information about challenges, events and rewards. (optional)</string>
    <string name="work_email_instruction_full">Add your work email to be enrolled into your employer’s community. You will have to verify through email sent to that work email. If the company does not have an active community for now, you will automatically be enrolled when/if it is created.</string>
    <string name="search">Search</string>
    <string name="home">Home</string>
    <string name="explore">Explore</string>
    <string name="explore_search">Explore Search</string>
    <string name="rewards">Rewards</string>
    <string name="reward">Reward</string>
    <string name="you">You</string>
    <string name="minutes">Minutes</string>
    <string name="activities">Activities</string>
    <string name="activity">Activity</string>
    <string name="km">km</string>
    <string name="distance">Distance:</string>
    <string name="distancee">Distance</string>
    <string name="time">Time</string>
    <string name="elev_gain">Elev Gain</string>
    <string name="join_now">JOIN NOW</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="welcome_to">Welcome to</string>
    <string name="create_an_account">Create an account</string>
    <string name="sign_up_with">Sign up with</string>
    <string name="show_all">Show all</string>
    <string name="join_community_with_code">Join community with code</string>
    <string name="view_all_post">View All Post</string>
    <string name="challenges">Challenges</string>
    <string name="challenge">Challenge</string>
    <string name="communities">Communities</string>
    <string name="events">Events</string>
    <string name="event">Event</string>
    <string name="activity_calendar">Activity Calendar</string>
    <string name="excellent_what_would_you_like_to_do">Excellent, what Would you like to do?</string>
    <string name="create_a_new_challenge">Create a new challenge</string>
    <string name="join_recommended_challenges">Join Recommended Challenges</string>
    <string name="create_new_event">Create new event</string>
    <string name="edit_event">Edit event</string>
    <string name="join_recommended_events">Join Recommended Events</string>
    <string name="create_community">Create Community</string>
    <string name="join_recommended_communities">Join Recommended Communities</string>
    <string name="create_new_challenge">Create new challenge</string>
    <string name="challenge_name">Challenge Name</string>
    <string name="description">Description</string>
    <string name="organizer">Organizer</string>
    <string name="select_organizer">Select Organizer</string>
    <string name="select_community">Please select the community</string>
    <string name="activity_type">Activity Type</string>
    <string name="who_joined_you">Who joined you on this activity?</string>
    <string name="find_people_from_network">Find people from network</string>
    <string name="challenge_type">Type</string>
    <string name="select_challenge_type">Select Challenge Type</string>
    <string name="challenge_type_category">Challenge Type Category</string>
    <string name="winning_criteria">Winning Criteria</string>
    <string name="select_challenge_type_category">Select Challenge Type Category</string>
    <string name="select_winning_criteria">Select Winning Criteria</string>
    <string name="target">Target</string>
    <string name="level_criteria">Level Criteria</string>
    <string name="min_level_criteria_hint">Minimum level criteria (\u003Ethan a level)</string>
    <string name="max_level_criteria_hint">Maximum level criteria (\u003Cthan a level)</string>
    <string name="level_criteria_info">If you set a minimum or maximum level criteria, then you restrict who can join this challenge according to the level you set.</string>
    <string name="_40">40</string>
    <string name="duration">Duration</string>
    <string name="start_date">Start Date</string>
    <string name="end_date">End Date</string>
    <string name="my_challenges">My Challenges</string>
    <string name="network_challenges">Network</string>
    <string name="joined">Joined</string>
    <string name="join_">Join?</string>
    <string name="active">Active</string>
    <string name="previous">Previous</string>
    <string name="join_challenge">Join Challenge</string>
    <string name="reject">Reject</string>
    <string name="details">Details</string>
    <string name="leaderboard">Leaderboard</string>
    <string name="participants">Participants</string>
    <string name="partners">Partners</string>
    <string name="rank">Rank</string>
    <string name="delete">Delete</string>
    <string name="map_visibility_option_1">Hide the start and end points of activities (at all activities)</string>
    <string name="off">Off</string>
    <string name="_400">400</string>
    <string name="_800">800</string>
    <string name="_1200">1200</string>
    <string name="_1600">1600</string>
    <string name="join_challenges">Join Challenges</string>
    <string name="no_rewards">No rewards available.</string>
    <string name="no_rewards_info">To get rewards you must join challenge\'s that has rewards added</string>
    <string name="edit">Edit</string>
    <string name="turn_on_notifications">Turn On Notifications</string>
    <string name="turn_off_notifications">Turn Off Notifications</string>
    <string name="un_join">Unjoin</string>
</resources>