<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.frami.ui.dialog.LoginDialog">

    <data>

        <import type="android.view.View" />

        <variable
            name="progress"
            type="Integer" />

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/bg_bottom_sheet_light_bg">

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guidelineStart"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.05" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guidelineEnd"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.95" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guidelineTop"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.05" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guidelineBottom"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.95" />


        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvTitle"
            style="@style/TextViewStyleRegular"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:gravity="start|center_vertical"
            android:paddingVertical="30dp"
            android:text="@string/map_visibility_option_1"
            android:textColor="@color/colorSubHeaderText"
            app:layout_constraintEnd_toEndOf="@id/guidelineEnd"
            app:layout_constraintStart_toStartOf="@id/guidelineStart"
            app:layout_constraintTop_toTopOf="parent" />

        <ProgressBar
            android:id="@+id/mProgress"
            style="?android:progressBarStyleHorizontal"
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:max="1600"
            android:progress="@{progress}"
            android:scaleY="6"
            app:layout_constraintEnd_toEndOf="@id/guidelineEnd"
            app:layout_constraintStart_toStartOf="@id/guidelineStart"
            app:layout_constraintTop_toBottomOf="@id/tvTitle" />

        <LinearLayout
            android:id="@+id/llOptions"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="@id/guidelineEnd"
            app:layout_constraintStart_toStartOf="@id/guidelineStart"
            app:layout_constraintTop_toBottomOf="@id/tvTitle">

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tvOff"
                style="@style/TextViewStyleRegular"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_weight="1"
                android:gravity="start|center_vertical"
                android:paddingVertical="40dp"
                android:text="@string/off"
                android:textColor="@color/colorSubHeaderText"
                android:textSize="@dimen/text_size_medium" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tv400"
                style="@style/TextViewStyleRegular"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_weight="1"
                android:gravity="start|center_vertical"
                android:paddingVertical="40dp"
                android:text="@string/_400"
                android:textColor="@color/colorSubHeaderText"
                android:textSize="@dimen/text_size_medium" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tv800"
                style="@style/TextViewStyleRegular"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_weight="1"
                android:gravity="start|center_vertical"
                android:paddingVertical="40dp"
                android:text="@string/_800"
                android:textColor="@color/colorSubHeaderText"
                android:textSize="@dimen/text_size_medium" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tv1200"
                style="@style/TextViewStyleRegular"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_weight="1"
                android:gravity="start|center_vertical"
                android:paddingVertical="40dp"
                android:text="@string/_1200"
                android:textColor="@color/colorSubHeaderText"
                android:textSize="@dimen/text_size_medium" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tv1600"
                style="@style/TextViewStyleRegular"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_weight="1"
                android:gravity="start|center_vertical"
                android:paddingVertical="40dp"
                android:text="@string/_1600"
                android:textColor="@color/colorSubHeaderText"
                android:textSize="@dimen/text_size_medium" />

        </LinearLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>